# pipilot-ide

./: .claude_history.json  .gitignore  2026-04-07-161704-perfect-now-i-have-another-question-can-we-creat.txt  ARCHITECTURE.md  DESIGN_SYSTEM.md  SECRETS.md  SPEC.md  completions.ts  electron-builder.json5  electron.vite.config.ts  headers.txt  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  replit.md  route.ts  tsconfig.json  tsconfig.node.tsbuildinfo  vite.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.pipilot/: design.md  plan.md
api/: deploy-site.ts
attached_assets/: Pasted-Create-an-open-source-IDE-app-equipped-with-smart-load-_1774963485653.txt
electron/: ipc-api.ts  main.ts  preload.ts
fiddle-pipilot-ide/: main.js  package-lock.json  package.json  package.json.bak  preload.js
public/: site-proxy.html
scripts/: bundle-server.mjs
server/: checkpoints.ts  cloud.ts  dev-server.ts  diagnostics.ts  git.ts  index.ts  screenshot.ts  search-index.ts  seed-config.ts  workspaces.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/server-bundle/: .gitignore
src-tauri/src/: checkpoint.rs  cloud.rs  codestral.rs  devserver.rs  diagnostics.rs  filesystem.rs  git.rs  lib.rs  main.rs  terminal.rs  wiki.rs  workspace.rs
src/data/: tools.ts  (+1 more)
test-results/: .last-run.json
tests/: agent-sdk.spec.ts  app-test.spec.ts  chat-test.spec.ts  input-latency.spec.ts  interaction-tools.spec.ts  settings-test.spec.ts  (+1 more)
(+153 files in other folders)
