[package]
name = "pipilot-ide"
version = "0.1.0"
description = "PiPilot IDE — AI-native code editor"
authors = ["PiPilot"]
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "pipilot_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
